# university

./: README.md  lab1.2_sem2.cpp  lab7.cpp
diploma/: README.md  report.tex
iosu/: README.md
mpsu/: README.md
oop/: ChipHeader.h  README.md  TemplateHeader.h  lab2.cpp  lab3_1.cpp  lab3_2.cpp  lab4.cpp
osapr/: README.md  lab2.py  requirements.txt
stp/backend/src/: .env.template  manage.py  pyproject.toml
stp/backend/src/auth_app/: admin.py  models.py  serializers.py  urls.py  views.py
stp/backend/src/auth_app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_usersessions_options.py
stp/backend/src/core_app/: models.py  pagination.py  storage.py  urls.py  utils.py  views.py
stp/backend/src/django_instagram/: asgi.py  settings.py  urls.py  wsgi.py
stp/backend/src/django_instagram/config/: settings.py
stp/backend/src/groups_app/: models.py  serializers.py
stp/backend/src/groups_app/migrations/: 0001_initial.py  0002_initial.py
stp/backend/src/posts_app/: pagination.py  permission_classes.py  serializers.py  urls.py  views.py
stp/backend/src/posts_app/migrations/: 0001_initial.py  0002_remove_comment_created_remove_post_created_and_more.py
stp/backend/src/posts_app/models/: __init__.py  bookmark.py  comment.py  like.py  post.py
stp/backend/src/users_app/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
stp/backend/src/users_app/migrations/: 0001_initial.py  0002_alter_user_avatar_color_alter_user_first_name_and_more.py  0003_alter_user_options_alter_user_followers.py
stp/backend/src/utils/: date_utils.py
(+473 files in other folders)
